SERVER-68495 Update resharded zones after kCommitting transition.

Attempting to update the namespace of the config.tags documents may
otherwise repeatedly fail with a WriteConflict due to WT cache eviction
aborting the transaction.