src/mongo/s/write_ops/batched_command_request.h
@@ -175,7 +175,8 @@ public:
                                                const BSONObj& query,
                                                const BSONObj& update,
                                                bool upsert,
-                                               bool multi);
+                                               bool multi,
+                                               const boost::optional<BSONObj>& hint = boost::none);
 
     /**
      *  Returns batch of pipeline update operations to be attached to a transaction
