src/mongo/db/s/resharding/resharding_coordinator_test.cpp
@@ -630,6 +630,8 @@ protected:
                                     _finalEpoch,
                                     _finalTimestamp);
 
+        updateTagsDocsForTempNss(operationContext(), expectedCoordinatorDoc);
+
         // Check that config.reshardingOperations and config.collections entries are updated
         // correctly
         assertStateAndCatalogEntriesMatchExpected(opCtx, expectedCoordinatorDoc, _finalEpoch);
